--- a/src/sass/modules/top-offers-responsive.scss
+++ b/src/sass/modules/top-offers-responsive.scss
@@ -3,7 +3,7 @@
         .offers-title {
             .line-bg {
                 &:after, &:before {
-                    width: 25.5%;
+                   display: none;
                 }
             }
         }
