--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -28,6 +28,10 @@
 @import 'modules/modal';
 @import 'modules/breadcrumbs';
 @import 'modules/contact';
+@import 'modules/responsive-modal';
+@import 'modules/gallery';
+@import 'modules/tabs';
+@import 'modules/empty-page';
 
 img {max-width: 100%; vertical-align: middle;}
   
