--- a/src/sass/helper.scss
+++ b/src/sass/helper.scss
@@ -117,12 +117,16 @@
   }
 } 
 
-.input-bg {
+.contact-input-bg {
   background: none;
   border: 1px solid #fff;
   padding: 20px;
   width: 100%;
   margin-bottom: 20px;
+  color: #fff;
+  &:focus {
+    outline: none;
+  }
   &::placeholder {
     color: #fff;
   }
