--- a/src/sass/modules/cart-button.scss
+++ b/src/sass/modules/cart-button.scss
@@ -14,6 +14,20 @@
     &.active-cart {
         opacity: 1;
         visibility: visible;
+        z-index: 3;
+    }
+
+    .price-bg {
+        @extend .flex-container;
+        margin-top: 20px;
+        align-items: center;
+        .order-price-holder {
+            margin-top: 0;
+        }
+        .order-quantity {
+            min-width: 86px;
+            width: 100%;
+        }
     }
 
     .cart-title {
@@ -67,6 +81,8 @@
         font-family: $bold;
         font-size: 14px;
         margin-right: 30px;
+        color: #333;
+        text-decoration: none;
     }
 
     .order-price {
@@ -74,6 +90,12 @@
         font-family: $bold;
         color: $nav-bg;
         margin-right: 30px;
+    }
+
+    .time {
+        color: #d24051;
+        font-family: $bold;
+        margin-left: 5px;
     }
 
     .order-clear {
