--- a/src/sass/modules/contact.scss
+++ b/src/sass/modules/contact.scss
@@ -120,6 +120,14 @@
     }
 }
 
+@media (max-width: 1024px) {
+    .map {
+       iframe {
+         height: 350px;
+       }
+    }
+}
+
 @media (max-width: 945px) {
     .contact-wrap  {
         margin-bottom: 100px;
@@ -137,6 +145,23 @@
 
 }
 
+@media (max-width: 768px) {
+    .contact-wrap .contact-address {
+        margin-bottom: 20px;
+    }
+
+    .captcha-holder {
+        flex-wrap: wrap;
+        .captcha {
+            margin-bottom: 20px;
+        }
+        .captcha, .form-btn {
+            width: 100%;
+            max-width: inherit;
+        }
+    }
+}
+
 @media (max-width: 651px) {
     .fourm-group {
         flex-wrap: wrap;
@@ -144,5 +169,26 @@
             margin-right: 0;
             width: 100%;
         }
+    }
+
+    .map {
+        iframe {
+          height: 300px;
+        }
+     }
+}
+
+@media (max-width: 540px) {
+    .contact-wrap .contact-heading {
+        letter-spacing: 10px;
+        font-size: 23px;
+    }
+    
+}
+
+@media (max-width: 443px) {
+    .contact-wrap .contact-heading {
+        letter-spacing: 5px;
+        font-size: 20px;
     }
 }
