--- a/src/sass/modules/slider.scss
+++ b/src/sass/modules/slider.scss
@@ -32,6 +32,9 @@
         padding-top: 163px;
         position: relative;
         max-width: 670px;
+        @media (min-width: 1000px) {
+            min-width: 670px;
+        }
         margin-right: 267px;
     }
     
@@ -40,6 +43,18 @@
         font-size: 107px;
         color: #fff;
         margin-bottom: 66px;
+    }
+
+    
+
+    .price-description {
+        max-width: 484px;
+        width: 100%;
+        line-height: 1.5;
+        margin-bottom: 39px;
+        color: #fff;
+        margin: 20px 0 10px;
+        display: block
     }
 
     .slider-price-holder {
@@ -82,7 +97,7 @@
             @extend .flex-container;
             align-items: flex-end;
             line-height: .7;
-            margin-top: 64px;
+            margin-top: 38px;
         }
 
         .currency {
@@ -111,7 +126,7 @@
         right: 0;
         z-index: 0;
         flex: 0 0 49%;
-        bottom: 174px;
+        bottom: 60px;
         background: #fff;
         .splide__progress__bar {
             background: #ef4459;
@@ -122,7 +137,7 @@
         @extend .flex-container;
         list-style: none;
         position: absolute;
-        bottom: 149px;
+        bottom: 40px;
         right: 837px;
         li {
             margin-right: 46px;
@@ -168,5 +183,22 @@
                 }
             }
         }
+    }
+}
+
+.old-price {
+    @extend .flex-container;
+    color: #fff;
+    margin-top: 20px;
+    .old-price-num {
+        font-size: 64px;
+        text-decoration: line-through;
+        line-height: .8;
+    }
+
+    .old-currency {
+        font-size: 24px;
+        @extend .flex-container;
+        align-items: flex-end;
     }
 }
