--- a/src/sass/modules/cart-button-responsive.scss
+++ b/src/sass/modules/cart-button-responsive.scss
@@ -47,6 +47,10 @@
         .order-price-holder {
             margin-top: 0;
         }
+
+        .cart-title {
+            letter-spacing: 6px;
+        }
     }
 }
 
