--- a/src/sass/modules/contact.scss
+++ b/src/sass/modules/contact.scss
@@ -160,6 +160,18 @@
             max-width: inherit;
         }
     }
+
+    .contact-wrap .map {
+        margin-bottom: 10px;
+    }
+
+    .contact-wrap .contact-address {
+        margin-bottom: 60px;
+    }
+
+    .contact-wrap .contacts {
+        margin-bottom: 30px;
+    }
 }
 
 @media (max-width: 651px) {
