--- a/src/sass/modules/product.scss
+++ b/src/sass/modules/product.scss
@@ -47,8 +47,14 @@
         margin-bottom: 15px;
     }
 
+    .nav-holder .col-custom{ display: flex; align-items: stretch; }
+    .product{ display: flex;  flex-direction: column;}
+
+
     .prod-image {
         position: relative;
+        flex-shrink: 0;
+        display: flex;
         img {
             object-fit: cover;
             width: 100%;
@@ -376,3 +382,21 @@
             margin-left: -58px;
         }
 }
+
+.product{ display: flex;  flex-direction: column;}
+
+.product .prod-image { 
+    display: flex;
+    flex-shrink: 0;
+}
+.product figcaption{ 
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+.product figure{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+.product .prod-title{ display: flex;  flex-grow: 1; }
